# markdownmind

./: .gitignore  README.md  README_zh.md  README_zh_TW.md  pyproject.toml  requirements-dev.txt  setup.py
docs/examples/: sample.md
markdownmind/: __init__.py  analyzer.py  cli.py  diff.py  formatter.py  outline.py  parser.py  scorer.py
tests/: __init__.py  test_analyzer.py  test_parser.py  test_scorer.py
